[package]
name = "sqttv5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
num_enum = "0.6.1"
paste = "1.0.12"
rayon = "1.7.0"
scroll = { version = "0.11.0", features = ["derive"] }
